[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["wilboron <williammingardi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apipkg = "^1.5"
attrs = "^20.3.0"
click = "^7.1.2"
coverage = "^5.5"
execnet = "^1.8.0"
Flask = "^1.1.2"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.3"
MarkupSafe = "^1.1.1"
more-itertools = "^8.7.0"
packaging = "^20.9"
pluggy = "^0.13.1"
py = "^1.10.0"
pyparsing = "^2.4.7"
pytest = "^6.2.3"
pytest-forked = "^1.3.0"
pytest-xdist = "^2.2.1"
six = "^1.15.0"
wcwidth = "^0.2.5"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
